--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Coiny&display=swap");
+
 .App {
   text-align: center;
+}
+
+h1 {
+  font-family: "Bungee Inline", cursive;
+  /* font-family: "Coiny", cursive; */
+  font-size: 3rem;
+  color: #0ccac4;
+  margin-bottom: 0;
 }
